Use /api path prefix for api requests
